--- a/index.html
+++ b/index.html
@@ -15,24 +15,29 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <a href="https://twitch.tv/kotuu3">Twitch</a>
-        <a href="#">Youtube</a>
-        <a href="#">Discord</a>
-        <a href="#">Twitter</a>
-        <a href="website" class="kotek"><img src="https://cdn.discordapp.com/attachments/991378088720089108/1084845809268424774/kotek.png"></a>
-    </div>
+   
 
-    <div class="header">
-        <h1>Kotuu3</h1> 
-        <p>Streamer, fotograf, gracz</p>
-    </div>
+<div class="main">
+    <img src="https://cdn.discordapp.com/attachments/991378088720089108/1085631231259066378/Bez_nazwy-1.png"  width="30%" >
+        <div class="nick">
+            <h1>Kotuu3</h1>
+                <div class="linki">
+                    <a href="https://twitch.tv/kotuu3">Twitch</a>
+                    <a href="https://twitter.com/Kotuu31">Twitter</a>
+                    <a href="https://www.instagram.com/kotuu333/">Instagram</a>
+                </div>   
+            </div> 
+
+        </div>
+
+        <div class="disord-widget">
+            <iframe src="https://discord.com/widget?id=890230385206779955&theme=dark" width="300" height="350" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
 
 
-
-
-
-
+<div class="footer">
+    <h2>Made by Kotuu3</h2>
+</div>
 
 </body>
 
