--- a/index.html
+++ b/index.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
-<html land="pl">
+<html lang="en">
 <head>
-    <title>Kotuu3web</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="css" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-        <style>
-            body {
-                font-family: 'Roboto'; font-size: 22;
-            }
-
-        </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+	<title>Kotuu3web</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-   
+	<header>
+		<img src="https://cdn.discordapp.com/attachments/991378088720089108/1085631231259066378/Bez_nazwy-1.png" alt="Profile Picture">
+		<h1>Kotuu3</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="https://twitch.tv/kotuu3">Twitch</a></li>
+			<li><a href="https://discord.gg/p9TjFVDGJW">Discord</a></li>
+			<li><a href="https://twitter.com/Kotuu31">Twitter</a></li>
+			<li><a href="https://www.instagram.com/kotuu333/">Instagram</a></li>
+		</ul>
+	</nav>
+	<main>
+		<div class="container">
+			<h1>GitHub</h1>
+			<div class="gallery">
+				<div class="gallery-item">
+					<img src="https://camo.githubusercontent.com/d06b6215d7c6cb165f63a00057298a71dc651ec0420d5dae335eeb07e3236d20/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f313038303438303633323831333134323036362f313038323136353332303335393334363137362f696d6167652e706e67" alt="Animal">
+					<div class="description">
+						<p>RainyDay BetterDiscord theme.</p>
+					</div>
+				</div>
+				<div class="gallery-item">
+					<img src="https://camo.githubusercontent.com/a7daf75efc4cb5958e6c60a8a94f7389754e02d6d6f972b3f1795ce77c4bc37b/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f313038303438303633323831333134323036362f313038303438373336393332323534353138322f696d6167652e706e67" alt="Architecture">
+					<div class="description">
+						<p>DiscordHub BetterDiscord theme.</p>
+					</div>
+				</div>
 
-<div class="main">
-    <img src="https://cdn.discordapp.com/attachments/991378088720089108/1085631231259066378/Bez_nazwy-1.png"  width="30%" >
-        <div class="nick">
-            <h1>Kotuu3</h1>
-                <div class="linki">
-                    <a href="https://twitch.tv/kotuu3">Twitch</a>
-                    <a href="https://twitter.com/Kotuu31">Twitter</a>
-                    <a href="https://www.instagram.com/kotuu333/">Instagram</a>
-                </div>   
-            </div> 
+				</div>
+			</div>
+		</div>
+		
 
-        </div>
+		<h2>Kolekcja zdjęć</h2>
+		<div class="photo-gallery">
+			<img src="https://cdn.discordapp.com/attachments/991378088720089108/1084848322654777445/kicia_4_of_7.jpg" alt="Photo 1">
+			<img src="https://cdn.discordapp.com/attachments/991378088720089108/1085960809924014111/zdjecie_4_of_5.jpg" alt="Photo 2">
+			<img src="https://cdn.discordapp.com/attachments/991378088720089108/1085960886272929802/zdjecie_1_of_5.jpg" alt="Photo 3">
+			<img src="https://cdn.discordapp.com/attachments/991378088720089108/1085960904417476718/zdjecie_2_of_5.jpg" alt="Photo 4">
+		</div>
+	</main>
 
-        <div class="disord-widget">
-            <iframe src="https://discord.com/widget?id=890230385206779955&theme=dark" width="300" height="350" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-        </div>
+	<div class="discord">
+		<iframe src="https://discord.com/widget?id=890230385206779955&theme=dark"
+		width="350"
+		height="400"
+		allowtransparency="true" 
+		frameborder="0" 
+		sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+		</iframe>
+	</div>
 
-
-<div class="footer">
-    <h2>Made by Kotuu3</h2>
-</div>
-
+	<footer>
+		
+		<p>&copy; 2023 Kotuu3. All rights reserved.</p>
+	</footer>
 </body>
-
-
 </html>
