--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
 		<img src="https://cdn.discordapp.com/attachments/991378088720089108/1085631231259066378/Bez_nazwy-1.png" alt="Profile Picture">
-		<h1>Kotuu3</h1>
+		<h1>Maciej "Kotuu3" Głowacki Szmidt</h1>
 	</header>
 	<nav>
 		<ul>
